# speech-commands-AI

./: .gitignore  README.md  pyproject.toml
apps/: threshold_gap_analysis.py
configs/: evaluate.yaml  export_onnx.yaml  train.yaml
configs/data_source/: duckdb.yaml
configs/dataset/: multilabel_speech.yaml
configs/experiment/: robot_commands.yaml
configs/logger/: clearml.yaml  local.yaml
configs/loss/: bce_with_logits.yaml
configs/model/: mobilenet_v3.yaml
configs/paths/: default.yaml
configs/thresholds/: default.yaml
configs/trainer/: default.yaml
src/: __init__.py  config.py  evaluate.py  export_onnx.py  thresholds.py  train.py
src/data/: __init__.py  audio_features.py  duckdb_dataset.py  label_encoding.py
src/evaluation/: __init__.py  metrics.py  threshold_gap_analysis.py
src/losses/: __init__.py  bce_with_logits.py
src/models/: __init__.py  mobilenet_v3.py
tests/: conftest.py  test_duckdb_dataset.py  test_export_onnx.py  test_hydra_configs.py  test_label_encoding.py  test_metrics.py  test_threshold_gap_analysis.py  test_thresholds_and_loss.py  test_train_eval_smoke.py
