[project]
name = "edge-speech-commands"
version = "0.1.0"
description = "Multi-label edge speech command training, evaluation, thresholding, and ONNX export."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "clearml>=1.14",
  "duckdb>=0.10",
  "hydra-core>=1.3",
  "numpy>=1.24",
  "omegaconf>=2.3",
  "pandas>=2.0",
  "plotly>=5.0",
  "scikit-learn>=1.3",
  "streamlit>=1.30",
  "torch>=2.1",
  "torchvision>=0.16",
]

[project.optional-dependencies]
export = ["onnx>=1.15", "onnxruntime>=1.16"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
